# pr-risk-action

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: test.yml
profiles/getsentry__cli/: README.md  model.json
profiles/getsentry__dotagents/: README.md
profiles/getsentry__junior/: README.md
profiles/getsentry__sentry/: README.md
profiles/getsentry__sentry-dotnet/: README.md
profiles/getsentry__sentry-mcp/: README.md
profiles/getsentry__snuba/: README.md
src/risk_pr_agent/: __init__.py  cli.py  features.py  git_history.py  github.py  modeling.py  scoring.py
tests/: test_cli.py  test_features.py  test_git_history.py  test_scoring.py
