[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-pr-agent"
version = "0.1.0"
description = "Offline PR risk dataset and evaluation tooling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
risk-pr = "risk_pr_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
